// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Row correctly 1`] = `
@media (max-width:767px) {
  .emotion-0 {
    display: block;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(6,104px);
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(8,104px);
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(10,104px);
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(12,104px);
  }
}

@media (min-width:1456px) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(14,104px);
  }
}

<div>
  <div
    className="emotion-0"
  />
</div>
`;

exports[`renders Row with maxColumns correctly 1`] = `
@media (max-width:767px) {
  .emotion-12 {
    display: block;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-12 {
    display: grid;
    grid-template-columns: repeat(6,104px);
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-12 {
    display: grid;
    grid-template-columns: repeat(8,104px);
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-12 {
    display: grid;
    grid-template-columns: repeat(10,104px);
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-12 {
    display: grid;
    grid-template-columns: repeat(12,104px);
  }
}

@media (min-width:1456px) {
  .emotion-12 {
    display: grid;
    grid-template-columns: repeat(14,104px);
  }
}

@media (max-width:767px) {
  .emotion-0 {
    display: block;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(6,104px);
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(1,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(1,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(1,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:1456px) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(1,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:767px) {
  .emotion-1 {
    display: block;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-1 {
    display: grid;
    grid-template-columns: repeat(6,104px);
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-1 {
    display: grid;
    grid-template-columns: repeat(2,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-1 {
    display: grid;
    grid-template-columns: repeat(2,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-1 {
    display: grid;
    grid-template-columns: repeat(2,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:1456px) {
  .emotion-1 {
    display: grid;
    grid-template-columns: repeat(2,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:767px) {
  .emotion-2 {
    display: block;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-2 {
    display: grid;
    grid-template-columns: repeat(6,104px);
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-2 {
    display: grid;
    grid-template-columns: repeat(3,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-2 {
    display: grid;
    grid-template-columns: repeat(3,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-2 {
    display: grid;
    grid-template-columns: repeat(3,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:1456px) {
  .emotion-2 {
    display: grid;
    grid-template-columns: repeat(3,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:767px) {
  .emotion-3 {
    display: block;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-3 {
    display: grid;
    grid-template-columns: repeat(6,104px);
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-3 {
    display: grid;
    grid-template-columns: repeat(4,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-3 {
    display: grid;
    grid-template-columns: repeat(4,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-3 {
    display: grid;
    grid-template-columns: repeat(4,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:1456px) {
  .emotion-3 {
    display: grid;
    grid-template-columns: repeat(4,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:767px) {
  .emotion-4 {
    display: block;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-4 {
    display: grid;
    grid-template-columns: repeat(6,104px);
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-4 {
    display: grid;
    grid-template-columns: repeat(5,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-4 {
    display: grid;
    grid-template-columns: repeat(5,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-4 {
    display: grid;
    grid-template-columns: repeat(5,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:1456px) {
  .emotion-4 {
    display: grid;
    grid-template-columns: repeat(5,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:767px) {
  .emotion-5 {
    display: block;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-5 {
    display: grid;
    grid-template-columns: repeat(6,104px);
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-5 {
    display: grid;
    grid-template-columns: repeat(6,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-5 {
    display: grid;
    grid-template-columns: repeat(6,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-5 {
    display: grid;
    grid-template-columns: repeat(6,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:1456px) {
  .emotion-5 {
    display: grid;
    grid-template-columns: repeat(6,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:767px) {
  .emotion-6 {
    display: block;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-6 {
    display: grid;
    grid-template-columns: repeat(6,104px);
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-6 {
    display: grid;
    grid-template-columns: repeat(8,104px);
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-6 {
    display: grid;
    grid-template-columns: repeat(7,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-6 {
    display: grid;
    grid-template-columns: repeat(7,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:1456px) {
  .emotion-6 {
    display: grid;
    grid-template-columns: repeat(7,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:767px) {
  .emotion-7 {
    display: block;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-7 {
    display: grid;
    grid-template-columns: repeat(6,104px);
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-7 {
    display: grid;
    grid-template-columns: repeat(8,104px);
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-7 {
    display: grid;
    grid-template-columns: repeat(8,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-7 {
    display: grid;
    grid-template-columns: repeat(8,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:1456px) {
  .emotion-7 {
    display: grid;
    grid-template-columns: repeat(8,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:767px) {
  .emotion-8 {
    display: block;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-8 {
    display: grid;
    grid-template-columns: repeat(6,104px);
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-8 {
    display: grid;
    grid-template-columns: repeat(8,104px);
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-8 {
    display: grid;
    grid-template-columns: repeat(10,104px);
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-8 {
    display: grid;
    grid-template-columns: repeat(9,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:1456px) {
  .emotion-8 {
    display: grid;
    grid-template-columns: repeat(9,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:767px) {
  .emotion-9 {
    display: block;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-9 {
    display: grid;
    grid-template-columns: repeat(6,104px);
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-9 {
    display: grid;
    grid-template-columns: repeat(8,104px);
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-9 {
    display: grid;
    grid-template-columns: repeat(10,104px);
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-9 {
    display: grid;
    grid-template-columns: repeat(10,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:1456px) {
  .emotion-9 {
    display: grid;
    grid-template-columns: repeat(10,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:767px) {
  .emotion-10 {
    display: block;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-10 {
    display: grid;
    grid-template-columns: repeat(6,104px);
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-10 {
    display: grid;
    grid-template-columns: repeat(8,104px);
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-10 {
    display: grid;
    grid-template-columns: repeat(10,104px);
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-10 {
    display: grid;
    grid-template-columns: repeat(12,104px);
  }
}

@media (min-width:1456px) {
  .emotion-10 {
    display: grid;
    grid-template-columns: repeat(11,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:767px) {
  .emotion-11 {
    display: block;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-11 {
    display: grid;
    grid-template-columns: repeat(6,104px);
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-11 {
    display: grid;
    grid-template-columns: repeat(8,104px);
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-11 {
    display: grid;
    grid-template-columns: repeat(10,104px);
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-11 {
    display: grid;
    grid-template-columns: repeat(12,104px);
  }
}

@media (min-width:1456px) {
  .emotion-11 {
    display: grid;
    grid-template-columns: repeat(12,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

<div>
  <div
    className="emotion-0"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-2"
  />
  <div
    className="emotion-3"
  />
  <div
    className="emotion-4"
  />
  <div
    className="emotion-5"
  />
  <div
    className="emotion-6"
  />
  <div
    className="emotion-7"
  />
  <div
    className="emotion-8"
  />
  <div
    className="emotion-9"
  />
  <div
    className="emotion-10"
  />
  <div
    className="emotion-11"
  />
  <div
    className="emotion-12"
  />
  <div
    className="emotion-12"
  />
</div>
`;

exports[`renders Row with styles and maxColumns passed in correctly 1`] = `
.emotion-0 {
  color: #ccc;
  width: 100%;
}

@media (max-width:767px) {
  .emotion-0 {
    display: block;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(6,104px);
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(1,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(1,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(1,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:1456px) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(1,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

.emotion-1 {
  color: #ccc;
  width: 100%;
}

@media (max-width:767px) {
  .emotion-1 {
    display: block;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-1 {
    display: grid;
    grid-template-columns: repeat(6,104px);
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-1 {
    display: grid;
    grid-template-columns: repeat(6,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-1 {
    display: grid;
    grid-template-columns: repeat(6,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-1 {
    display: grid;
    grid-template-columns: repeat(6,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:1456px) {
  .emotion-1 {
    display: grid;
    grid-template-columns: repeat(6,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

.emotion-2 {
  color: #ccc;
  width: 100%;
}

@media (max-width:767px) {
  .emotion-2 {
    display: block;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-2 {
    display: grid;
    grid-template-columns: repeat(6,104px);
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-2 {
    display: grid;
    grid-template-columns: repeat(8,104px);
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-2 {
    display: grid;
    grid-template-columns: repeat(10,104px);
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-2 {
    display: grid;
    grid-template-columns: repeat(10,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:1456px) {
  .emotion-2 {
    display: grid;
    grid-template-columns: repeat(10,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

<div>
  <div
    className="emotion-0"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-2"
  />
</div>
`;

exports[`renders Row with styles passed in correctly 1`] = `
.emotion-0 {
  color: #ccc;
  width: 100%;
}

@media (max-width:767px) {
  .emotion-0 {
    display: block;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(6,104px);
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(8,104px);
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(10,104px);
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(12,104px);
  }
}

@media (min-width:1456px) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(14,104px);
  }
}

<div>
  <div
    className="emotion-0"
  />
</div>
`;

exports[`renders Row with styles, maxColumns and forceFullPage passed in correctly 1`] = `
.emotion-0 {
  width: 100vw;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (max-width:767px) {
  .emotion-0 {
    display: block;
    margin-top: 0;
    margin-right: calc(-1 * (100vw - undefinedpx) / 2);
    margin-bottom: 0;
    margin-left: calc(-1 * (100vw - undefinedpx) / 2);
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-0 {
    display: block;
    margin-top: 0;
    margin-right: calc(-1 * (100vw - 624px) / 2);
    margin-bottom: 0;
    margin-left: calc(-1 * (100vw - 624px) / 2);
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-0 {
    display: block;
    margin-top: 0;
    margin-right: calc(-1 * (100vw - 832px) / 2);
    margin-bottom: 0;
    margin-left: calc(-1 * (100vw - 832px) / 2);
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-0 {
    display: block;
    margin-top: 0;
    margin-right: calc(-1 * (100vw - 1040px) / 2);
    margin-bottom: 0;
    margin-left: calc(-1 * (100vw - 1040px) / 2);
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-0 {
    display: block;
    margin-top: 0;
    margin-right: calc(-1 * (100vw - 1248px) / 2);
    margin-bottom: 0;
    margin-left: calc(-1 * (100vw - 1248px) / 2);
  }
}

@media (min-width:1456px) {
  .emotion-0 {
    display: block;
    margin-top: 0;
    margin-right: calc(-1 * (100vw - 1456px) / 2);
    margin-bottom: 0;
    margin-left: calc(-1 * (100vw - 1456px) / 2);
  }
}

.emotion-1 {
  width: 100vw;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #ccc;
  width: 100%;
}

@media (max-width:767px) {
  .emotion-1 {
    display: block;
    margin-top: 0;
    margin-right: calc(-1 * (100vw - undefinedpx) / 2);
    margin-bottom: 0;
    margin-left: calc(-1 * (100vw - undefinedpx) / 2);
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-1 {
    display: block;
    margin-top: 0;
    margin-right: calc(-1 * (100vw - 624px) / 2);
    margin-bottom: 0;
    margin-left: calc(-1 * (100vw - 624px) / 2);
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-1 {
    display: block;
    margin-top: 0;
    margin-right: calc(-1 * (100vw - 832px) / 2);
    margin-bottom: 0;
    margin-left: calc(-1 * (100vw - 832px) / 2);
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-1 {
    display: block;
    margin-top: 0;
    margin-right: calc(-1 * (100vw - 1040px) / 2);
    margin-bottom: 0;
    margin-left: calc(-1 * (100vw - 1040px) / 2);
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-1 {
    display: block;
    margin-top: 0;
    margin-right: calc(-1 * (100vw - 1248px) / 2);
    margin-bottom: 0;
    margin-left: calc(-1 * (100vw - 1248px) / 2);
  }
}

@media (min-width:1456px) {
  .emotion-1 {
    display: block;
    margin-top: 0;
    margin-right: calc(-1 * (100vw - 1456px) / 2);
    margin-bottom: 0;
    margin-left: calc(-1 * (100vw - 1456px) / 2);
  }
}

<div>
  <div
    className="emotion-0"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
</div>
`;
